Fixed overflow-x problem

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,7 @@
 .App {
   height: 100%;
   min-height: 100vh;
-  width: 100vw;
-  max-width: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
