--- a/src/components/NormalComponents/HomePageComponents/HomePageTextArranger/HomePageText/HomePageText.module.css
+++ b/src/components/NormalComponents/HomePageComponents/HomePageTextArranger/HomePageText/HomePageText.module.css
@@ -1,13 +1,15 @@
 .homepage-text-container-parent {
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 5;
   pointer-events: none;
   height: 100vh;
-  width: 100vw;
+  max-width: 100%;
   display: flex;
   align-items: center;
-  margin-left: var(--spacing);
+  padding-left: var(--spacing);
   color: white;
 }
 
