--- a/src/components/UI/AnimatedContactButton/AnimatedContactButton.module.css
+++ b/src/components/UI/AnimatedContactButton/AnimatedContactButton.module.css
@@ -87,3 +87,15 @@
     background-size: 100% 100%;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .animated-contact-btn-container {
+    bottom: 2.5rem;
+    right: 1.5rem;
+  }
+
+  .fluid-container {
+    width: 3rem;
+    height: 3rem;
+  }
+}
